--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,24 +1,20 @@
 {
   "name": "@primer/brand-documentation",
+  "version": "0.5.1",
   "private": true,
   "repository": "primer/brand",
-  "version": "0.5.1",
   "scripts": {
-    "clean": "rm -rf public && rm -rf .cache",
-    "start": "rm -rf .cache && gatsby develop --open",
     "build": "npm run clean && cross-env NODE_ENV=production gatsby build --prefix-paths",
-    "build:preview": "npm run clean && cross-env NODE_ENV=production gatsby build"
-  },
-  "engines": {
-    "node": ">=16",
-    "npm": ">=7"
+    "build:preview": "npm run clean && cross-env NODE_ENV=production gatsby build",
+    "clean": "rm -rf public && rm -rf .cache",
+    "start": "rm -rf .cache && gatsby develop --open"
   },
   "dependencies": {
     "@primer/gatsby-theme-doctocat": "^4.0.0",
     "@primer/octicons-react": "^17.0.0",
     "@primer/react": "^35.1.0",
-    "cross-env": "7.0.2",
     "color2k": "^2.0.0",
+    "cross-env": "7.0.2",
     "gatsby": "^3.7.2",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-postcss": "^4.14.0",
@@ -31,5 +27,9 @@
     "css-to-string-loader": "^0.1.3",
     "path-browserify": "^1.0.1",
     "typescript": "^4.6.3"
+  },
+  "engines": {
+    "node": ">=16",
+    "npm": ">=7"
   }
 }
