--- a/package.json
+++ b/package.json
@@ -1,22 +1,7 @@
 {
   "name": "primer-brand",
-  "description": "Primer Brand is a GitHub's design system for creating React-based marketing websites and digital experiences.",
   "version": "0.5.1",
-  "author": "GitHub, Inc.",
-  "license": "MIT",
-  "workspaces": [
-    "packages/*",
-    "apps/*",
-    "!apps/docs"
-  ],
-  "bugs": {
-    "url": "https://github.com/primer/brand/issues"
-  },
-  "homepage": "https://primer.style/brand",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/primer/brand.git"
-  },
+  "description": "Primer Brand is a GitHub's design system for creating React-based marketing websites and digital experiences.",
   "keywords": [
     "primer",
     "react",
@@ -24,10 +9,21 @@
     "library",
     "design-system"
   ],
-  "engines": {
-    "npm": ">=8.0.0",
-    "node": ">=16.0.0"
+  "homepage": "https://primer.style/brand",
+  "bugs": {
+    "url": "https://github.com/primer/brand/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/primer/brand.git"
+  },
+  "license": "MIT",
+  "author": "GitHub, Inc.",
+  "workspaces": [
+    "packages/*",
+    "apps/*",
+    "!apps/docs"
+  ],
   "scripts": {
     "build": "npm run clean --workspaces --if-present && npm run build:lib && npm run build:docs && npm run build:storybook",
     "build:docs": "cd apps/docs && npm run build",
@@ -42,33 +38,37 @@
     "lint": "npm run lint --workspaces --if-present",
     "release": "npm run build && changeset publish",
     "start": "npm run build:lib && npm run start:storybook & npm run start:docs & npm run start:lib",
-    "start:storybook": "npm run start --workspace=apps/storybook",
     "start:docs": "cd apps/docs && npm run start",
     "start:lib": "npm run start --workspace=packages/react",
+    "start:storybook": "npm run start --workspace=apps/storybook",
     "test": "npm run test --workspaces --if-present",
     "test:visual": "npm run test:visual --workspace=packages/e2e"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.3",
+    "@changesets/cli": "^2.21.0",
     "@github/prettier-config": "^0.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
-    "prettier": "^2.5.1",
     "eslint-import-resolver-typescript": "^2.7.0",
+    "eslint-plugin-github": "^4.3.6",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-mdx": "^1.17.0",
     "eslint-plugin-primer-react": "^0.7.4",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-storybook": "^0.5.12",
-    "eslint-plugin-github": "^4.3.6",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
     "jest": "^27.5.1",
-    "@typescript-eslint/parser": "^5.17.0",
-    "ts-node": "^10.9.1",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.6.3",
-    "@changesets/changelog-github": "^0.4.3",
-    "@changesets/cli": "^2.21.0",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.6.3"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
