--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,17 +1,7 @@
 {
   "name": "@primer/react-brand",
-  "description": "Primer Brand is a GitHub's design system for creating React-based marketing websites and digital experiences.",
   "version": "0.5.1",
-  "author": "GitHub, Inc.",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/primer/brand/issues"
-  },
-  "homepage": "https://primer.style/brand",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/primer/brand.git"
-  },
+  "description": "Primer Brand is a GitHub's design system for creating React-based marketing websites and digital experiences.",
   "keywords": [
     "primer",
     "react",
@@ -19,10 +9,16 @@
     "library",
     "design-system"
   ],
-  "engines": {
-    "npm": ">=8.0.0",
-    "node": ">=16.0.0"
+  "homepage": "https://primer.style/brand",
+  "bugs": {
+    "url": "https://github.com/primer/brand/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/primer/brand.git"
+  },
+  "license": "MIT",
+  "author": "GitHub, Inc.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -32,8 +28,8 @@
   "scripts": {
     "build": "npm run clean && npm run build:css-types && webpack && scripts/postbuild",
     "build:css-types": "tcm -p 'src/**/*.module.css' .",
-    "build:types": "tsc --project tsconfig.build.json",
     "build:tokens": "node scripts/build-tokens.js",
+    "build:types": "tsc --project tsconfig.build.json",
     "check": "tsc --noEmit",
     "clean": "rm -rf lib",
     "format": "prettier --check '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
@@ -42,16 +38,15 @@
     "lint:fix": "npm run lint -- --fix",
     "release": "npm run build && changeset publish",
     "start": "npm run start:css-types",
-    "start:docs": "npm run build && cd apps/docs && npm run develop",
     "start:css-types": "tcm -w -p 'src/**/*.css' .",
+    "start:docs": "npm run build && cd apps/docs && npm run develop",
     "test": "jest",
     "test:visual": "npx build-storybook && scripts/playwright/run-visual-tests",
     "test:visual:generate": "npm run build:docs && ts-node scripts/playwright/playwright.generate-tests.ts",
     "test:visual:update-snapshots": "npx build-storybook && scripts/playwright/update-visual-snapshots"
   },
-  "peerDependencies": {
-    "react": ">=17 <= 18",
-    "react-dom": ">=17 <= 18"
+  "dependencies": {
+    "clsx": "^1.1.1"
   },
   "devDependencies": {
     "@primer/octicons-react": "^17.3.0",
@@ -83,7 +78,12 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
-  "dependencies": {
-    "clsx": "^1.1.1"
+  "peerDependencies": {
+    "react": ">=17 <= 18",
+    "react-dom": ">=17 <= 18"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
