fix primitives diff ci workflow

--- a/.github/workflows/ui_test_primitives_diff.yml
+++ b/.github/workflows/ui_test_primitives_diff.yml
@@ -15,8 +15,7 @@ jobs:
       - name: Checkout reference branch
         uses: actions/checkout@v2
         with:
-          #ref: ${{ github.base_ref }} TODO: Switch back to main before merge
-          ref: rezrah/npm-workspace
+          ref: ${{ github.base_ref }}
           path: temp-main
 
       - name: Set up Node
