restore missing fonts and visual snapshot

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -40,10 +40,7 @@
     "start": "npm run start:css-types",
     "start:css-types": "tcm -w -p 'src/**/*.css' .",
     "start:docs": "npm run build && cd apps/docs && npm run develop",
-    "test": "jest",
-    "test:visual": "npx build-storybook && scripts/playwright/run-visual-tests",
-    "test:visual:generate": "npm run build:docs && ts-node scripts/playwright/playwright.generate-tests.ts",
-    "test:visual:update-snapshots": "npx build-storybook && scripts/playwright/update-visual-snapshots"
+    "test": "jest"
   },
   "dependencies": {
     "clsx": "^1.1.1"
