--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -12,6 +12,8 @@
 
 - title: Components
   children:
+    - title: ComparisonTable
+      url: /components/ComparisonTable
     - title: FAQ
       url: /components/FAQ
     - title: Hero
