--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -31,8 +31,12 @@
       url: /components/Checkbox
     - title: FormControl
       url: /components/FormControl
+    - title: Radio
+      url: /components/Radio
     - title: Select
       url: /components/Select
+    - title: Textarea
+      url: /components/Textarea
     - title: TextInput
       url: /components/TextInput
 
