--- a/.github/workflows/visual_test_storybook.yml
+++ b/.github/workflows/visual_test_storybook.yml
@@ -91,3 +91,43 @@ jobs:
             Our visual comparison tests did not find any differences in the UI.
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COMMENT_IDENTIFIER: 'visual-comparison-diff'
+  update-snapshots:
+    if: ${{ github.event.label.name == 'update_snapshots' }}
+    name: Update visual snapshots
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: Set up Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install Playwright
+        run: |
+          npx playwright install
+          npx playwright install-deps chromium
+
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps
+
+      - name: Build assets
+        run: npm run build:lib && cd apps/storybook && npx build-storybook
+
+      - name: Update snapshots
+        run: cd pacakges/e2e && npm run test:visual:generate && npm run test:visual:update-snapshots
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Regenerated visual tests and updated snapshots
