--- a/.github/workflows/update_visual_snapshots.yml
+++ b/.github/workflows/update_visual_snapshots.yml
@@ -11,7 +11,7 @@ concurrency:
 jobs:
   update-snapshots:
     if: ${{ github.event.label.name == 'update snapshots' }}
-    name: Update visual snapshots
+    name: Update snapshots
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -53,4 +53,4 @@ jobs:
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Regenerated visual tests and updated snapshots
+          commit_message: github-actions[bot] Regenerated snapshots
