revert test changes to merge

--- a/.github/workflows/integration_test_astro.yml
+++ b/.github/workflows/integration_test_astro.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   test:
-    if: false
+    if: ${{ github.repository == 'primer/brand' }}
     name: Astro - React starter
     runs-on: ubuntu-latest
     steps:
