--- a/.github/workflows/integration_test_cra.yml
+++ b/.github/workflows/integration_test_cra.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   test:
-    if: false
+    if: ${{ github.repository == 'primer/brand' }}
     name: Create React App
     runs-on: ubuntu-latest
     steps:
