Updated CTABanner - Added docs - Changed shadow -  Updated export

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -14,6 +14,8 @@
   children:
     - title: ComparisonTable
       url: /components/ComparisonTable
+    - title: CTABanner
+      url: /components/CTABanner
     - title: FAQ
       url: /components/FAQ
     - title: Hero
