--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -45,6 +45,7 @@
     "clsx": "^1.1.1"
   },
   "devDependencies": {
+    "@primer/behaviors": "^1.3.1",
     "@primer/octicons-react": "^17.3.0",
     "@reach/auto-id": "^0.17.0",
     "@testing-library/dom": "^8.11.3",
