refactor design feedback

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -12,6 +12,8 @@
 
 - title: Components
   children:
+    - title: AnchorNav
+      url: /components/AnchorNav
     - title: ComparisonTable
       url: /components/ComparisonTable
     - title: FAQ
