--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "start:lib": "npm run start --workspace=packages/react",
     "start:storybook": "npm run start --workspace=apps/storybook",
     "test": "npm run test --workspaces --if-present",
-    "test:visual": "npm run test:visual --workspace=packages/e2e"
+    "test:visual": "npm run test:visual --workspace=packages/e2e",
+    "component": "plop component"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.3",
@@ -60,6 +61,7 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-storybook": "^0.5.12",
     "jest": "^27.5.1",
+    "plop": "^3.1.1",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
