--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -18,6 +18,8 @@
       url: /components/ComparisonTable
     - title: CTABanner
       url: /components/CTABanner
+    - title: CTAForm
+      url: /components/CTAForm
     - title: FAQ
       url: /components/FAQ
     - title: Hero
