--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -22,6 +22,8 @@
       url: /components/FAQ
     - title: Hero
       url: /components/Hero
+    - title: MinimalFooter
+      url: /components/MinimalFooter
     - title: OrderedList
       url: /components/OrderedList
     - title: River
