--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -14,6 +14,8 @@
   children:
     - title: AnchorNav
       url: /components/AnchorNav
+    - title: Button
+      url: /components/Button
     - title: ComparisonTable
       url: /components/ComparisonTable
     - title: CTABanner
