--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -42,6 +42,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@primer/behaviors": "^1.3.3",
     "clsx": "^1.1.1"
   },
   "devDependencies": {
@@ -66,6 +67,7 @@
     "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
+    "resize-observer-polyfill": "^1.5.1",
     "style-dictionary": "^3.7.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.7",
