--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -46,6 +46,7 @@
     "clsx": "^1.1.1"
   },
   "devDependencies": {
+    "@juggle/resize-observer": "^3.4.0",
     "@primer/octicons-react": "^17.3.0",
     "@reach/auto-id": "^0.17.0",
     "@testing-library/dom": "^8.11.3",
@@ -67,7 +68,6 @@
     "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
-    "resize-observer-polyfill": "^1.5.1",
     "style-dictionary": "^3.7.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.7",
