Added Image Docs to MDX Nav

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -32,6 +32,8 @@
       url: /components/FAQ
     - title: Hero
       url: /components/Hero
+    - title: Image
+      url: /components/Image
     - title: MinimalFooter
       url: /components/MinimalFooter
     - title: OrderedList
