--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -40,6 +40,8 @@
       url: /components/MinimalFooter
     - title: OrderedList
       url: /components/OrderedList
+    - title: Pillar
+      url: /components/Pillar
     - title: River
       url: /components/River
     - title: SectionIntro
