--- a/.github/workflows/integration_test_nextjs.yml
+++ b/.github/workflows/integration_test_nextjs.yml
@@ -46,7 +46,7 @@ jobs:
             cypress-${{ runner.os }}-cypress-
 
       - name: Installing dependencies
-        run: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps
+        run: npm ci --legacy-peer-deps
 
       - name: install dependencies and verify Cypress
         env:
@@ -70,7 +70,7 @@ jobs:
         run: cd ./packages/react && npm pack
 
       - name: Configuring Next.js
-        run: npx create-next-app@latest ${{env.NEXTJS_FOLDER}} --typescript
+        run: yes | npx create-next-app@latest ${{env.NEXTJS_FOLDER}} --typescript
 
       - name: Retrieving package version
         id: package-version
@@ -91,20 +91,20 @@ jobs:
 
       - name: Copying required files
         run: |
-          cp ./packages/e2e/integration-tests/nextjs/index.tsx ./${{env.NEXTJS_FOLDER}}/pages
+          cp ./packages/e2e/integration-tests/nextjs/page.tsx ./${{env.NEXTJS_FOLDER}}/app
           cp ./packages/e2e/integration-tests/nextjs/.eslintrc ./${{env.NEXTJS_FOLDER}}
           cp ./packages/e2e/cypress.config.js ./${{env.NEXTJS_FOLDER}}
           mkdir ${{env.NEXTJS_FOLDER}}/integration-tests
           cp -r ./packages/e2e/integration-tests/fixtures ./${{env.NEXTJS_FOLDER}}/integration-tests
           cp -r ./packages/e2e/integration-tests/tests ./${{env.NEXTJS_FOLDER}}/integration-tests
 
-      - name: Patching postcss bug in v12 of Next.js
-        uses: DamianReeves/write-file-action@master
-        with:
-          path: ${{env.NEXTJS_FOLDER}}/postcss.config.json
-          contents: |
-            {"plugins": []}
-          write-mode: overwrite
+      # - name: Patching postcss bug in v12 of Next.js
+      #   uses: DamianReeves/write-file-action@master
+      #   with:
+      #     path: ${{env.NEXTJS_FOLDER}}/postcss.config.json
+      #     contents: |
+      #       {"plugins": []}
+      #     write-mode: overwrite
 
       - name: Excluded cypress tests in-place
         run: npx json -I -f ${{env.NEXTJS_FOLDER}}/tsconfig.json -e 'this.exclude=["node_modules", "**/*.cy.ts"]'
