--- a/.github/workflows/integration_test_remix.yml
+++ b/.github/workflows/integration_test_remix.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Copying required files
         run: |
-          cp ./packages/e2e/integration-tests/remix.run/index.tsx ./${{env.TEST_FOLDER}}/app/routes
+          cp ./packages/e2e/integration-tests/remix.run/_index.tsx ./${{env.TEST_FOLDER}}/app/routes
           cp ./packages/e2e/integration-tests/remix.run/root.tsx ./${{env.TEST_FOLDER}}/app
           cp -r ./packages/e2e/integration-tests/fixtures ./${{env.TEST_FOLDER}}/app
           cp ./packages/e2e/cypress.config.js ./${{env.TEST_FOLDER}} 
