--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@github/prettier-config": "^0.0.6",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "@types/node": "^20.2.5",
     "eslint": "^8.41.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-github": "^4.7.0",
