--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -32,13 +32,16 @@
     "format": "prettier --check '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
     "format:fix": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
     "lint": "eslint '**/*.{js,ts,tsx,md,mdx}' --max-warnings=0 --config ../../.eslintrc.js",
+    "test:axe": "playwright test --config=scripts/playwright",
     "test:visual": "scripts/playwright/run-visual-tests",
     "test:visual:update": "npm run test:visual:generate && npm run test:visual:update-snapshots",
     "test:visual:generate": "cd ../../apps/storybook && npx storybook build && cd ../../packages/e2e && ts-node scripts/playwright/playwright.generate-tests.ts",
     "test:visual:update-snapshots": "scripts/playwright/update-visual-snapshots"
   },
   "devDependencies": {
-    "@playwright/test": "^1.34.3"
+    "@github/axe-github": "^0.5.0",
+    "@playwright/test": "^1.34.3",
+    "axe-playwright": "^1.1.12"
   },
   "engines": {
     "node": ">=16.0.0",
