--- a/package.json
+++ b/package.json
@@ -51,12 +51,13 @@
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.1",
     "@github/prettier-config": "^0.0.6",
+    "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
-    "@types/node": "^20.2.5",
     "eslint": "^8.41.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-github": "^4.7.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-mdx": "^1.17.1",
     "eslint-plugin-primer-react": "^0.7.4",
