--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -46,6 +46,8 @@
       url: /components/OrderedList
     - title: Pillar
       url: /components/Pillar
+    - title: Prose
+      url: /components/Prose
     - title: River
       url: /components/River
     - title: Section intro
