--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Primer Brand is a GitHub's design system for creating React-based marketing websites and digital experiences.",
   "keywords": [
     "primer",
+    "brand",
     "react",
     "components",
     "library",
