add Box component, storybook and docs

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -20,6 +20,8 @@
       url: /components/AnchorNav
     - title: Avatar
       url: /components/Avatar
+    - title: Box
+      url: /components/Box
     - title: Button
       url: /components/Button
     - title: Button group
