add logo suite component

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -42,6 +42,8 @@
       url: /components/Image
     - title: Label
       url: /components/Label
+    - title: LogoSuite
+      url: /components/LogoSuite
     - title: Minimal footer
       url: /components/MinimalFooter
     - title: Ordered list
