fix page name in sidebar

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -42,7 +42,7 @@
       url: /components/Image
     - title: Label
       url: /components/Label
-    - title: LogoSuite
+    - title: Logo suite
       url: /components/LogoSuite
     - title: Minimal footer
       url: /components/MinimalFooter
