Updated to Perfomant Controls

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -60,6 +60,8 @@
       url: /components/Testimonial
     - title: Unordered list
       url: /components/UnorderedList
+    - title: Video player
+      url: /components/VideoPlayer
 
 - title: Forms
   children:
