--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -24,7 +24,7 @@
     "build:preview": "npm run clean && scripts/build-storybook preview",
     "build:prod": "npm run clean && scripts/build-storybook",
     "clean": "rm -rf out",
-    "start": "storybook dev -p 6006"
+    "start": "storybook dev -p 6006 -s ../../docs/public/static"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.0",
