Added Bento Docs

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -20,6 +20,8 @@
       url: /components/AnchorNav
     - title: Avatar
       url: /components/Avatar
+    - title: Bento
+      url: /components/Bento
     - title: Box
       url: /components/Box
     - title: Button
