--- a/.github/workflows/ui_test_accessibility.yml
+++ b/.github/workflows/ui_test_accessibility.yml
@@ -36,4 +36,4 @@ jobs:
         run: npm run build && cd apps/storybook && npx storybook build
 
       - name: Serve Storybook and run tests
-        run: npx start-server-and-test 'npm run start --workspace=apps/storybook' 6006 'npm run test:axe'
+        run: npx start-server-and-test 'npm run start:axe --workspace=apps/storybook' 6006 'npm run test:axe'
