--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -12,6 +12,15 @@ permissions:
   id-token: write
 
 jobs:
+  dispatch-storybook-build:
+    if: ${{ github.repository == 'primer/brand' }}
+    name: Dispatch test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dispatch
+        run: |
+          curl -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{secrets.STAFF_STORYBOOK_DEPLOYMENT_PAT}}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/primer/brand-storybook/dispatches -d '{"event_type":"deploy_docs"}'
+
   build_deploy:
     if: ${{ github.repository == 'primer/brand' }}
     name: Production
@@ -20,5 +29,5 @@ jobs:
     with:
       node_version: 16
       install: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps && cd ..
-      build: npm run build && npm run build:docs && npm run build:storybook
+      build: npm run build:lib && npm run build:docs
       output_dir: apps/docs/public/
