--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -5,7 +5,7 @@ on:
 
 permissions:
   checks: write
-  contents: read
+  contents: write
   deployments: write
   pages: write
   id-token: write
@@ -21,6 +21,18 @@ jobs:
       install: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps && cd ..
       build: npm run build && npm run build:docs:preview && npm run build:storybook:preview
       output_dir: apps/docs/public/
+
+  # Storybook is deployed to a separate repo (primer/brand-storybook)
+  # This step dispatches a build request there
+  - name: Prod Storybook build notifier
+        run: |
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.STAFF_STORYBOOK_DEPLOYMENT_PAT }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/primer/brand-storybook/dispatches \
+            -d '{"event_type":"deploy_docs"}'
 
   deploy-storybook:
     if: ${{ github.repository == 'primer/brand' }}
