--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -12,12 +12,14 @@ permissions:
   id-token: write
 
 jobs:
+  # Storybook is deployed to a separate repo (primer/brand-storybook)
+  # This job dispatches a build request there
   dispatch-storybook-build:
     if: ${{ github.repository == 'primer/brand' }}
-    name: Dispatch test
+    name: Prod Storybook build notifier
     runs-on: ubuntu-latest
     steps:
-      - name: Dispatch
+      - name: Issue build request
         run: |
           curl -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{secrets.STAFF_STORYBOOK_DEPLOYMENT_PAT}}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/primer/brand-storybook/dispatches -d '{"event_type":"deploy_docs"}'
 
