--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -93,3 +93,8 @@
       url: /components/Heading
     - title: Text
       url: /components/Text
+
+- title: GitHub staff
+  children:
+    - title: Storybook
+      url: /github-staff/storybook
