--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -64,6 +64,8 @@
       url: /components/Timeline
     - title: Unordered list
       url: /components/UnorderedList
+    - title: Video player
+      url: /components/VideoPlayer
 
 - title: Forms
   children:
