--- a/.github/workflows/integration_test_astro.yml
+++ b/.github/workflows/integration_test_astro.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '18'
 
       - name: Caching dependencies
         uses: actions/cache@v2
@@ -103,6 +103,13 @@ jobs:
 
       - name: Testing compile-time build
         run: cd ${{env.ASTRO_FOLDER}} && npm run build
+
+      # Cypress is not able to run tests in the Astro project due to bundler errors
+      # Local tsconfig compilerOptions are not respected
+      # FIXME: When there is a workaround in both Cypress and Astro
+      # See https://github.com/cypress-io/cypress/issues/28052
+      - name: Remove base tsconfig due to bundler error
+        run: npx json -I -f ${{env.ASTRO_FOLDER}}/tsconfig.json -e 'delete this.extends'
 
       - name: Test runtime for errors and warnings
         run: cd ${{env.ASTRO_FOLDER}} && npx start-server-and-test 'npx http-server ./dist -p 3000' 3000 'npx cypress run --spec "./integration-tests/tests/*" --config video=false'
