--- a/.github/workflows/integration_test_cra.yml
+++ b/.github/workflows/integration_test_cra.yml
@@ -105,7 +105,7 @@ jobs:
       # We use start to respect reading direction
       # autoprefixer warning can be safely ignored here
       - name: Remove autoprefixer warning about start vs flex-start
-        run: npx json -I -f cra-test/package.json -e 'this.ignoreWarnings=["autoprefixer:" "start value has mixed support, consider using flex-start instead"]'
+        run: npx json -I -f ${{env.CRA_FOLDER}}/package.json -e 'this.ignoreWarnings=["autoprefixer:" "start value has mixed support, consider using flex-start instead"]'
 
       - name: Testing compile-time build
         run: cd ${{env.CRA_FOLDER}} && npm run build
