add eyebrow banner component, stories and docs

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -36,6 +36,8 @@
       url: /components/CTABanner
     - title: CTA form
       url: /components/CTAForm
+    - title: Eyebrow banner
+      url: /components/EyebrowBanner
     - title: FAQ
       url: /components/FAQ
     - title: Hero
