--- a/package.json
+++ b/package.json
@@ -61,12 +61,13 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-mdx": "^1.17.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-primer-react": "^0.7.4",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.5.13",
     "jest": "^27.5.1",
-    "prettier": "^2.8.8",
+    "prettier": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "ts-jest": "^27.1.5",
