--- a/packages/design-tokens/package.json
+++ b/packages/design-tokens/package.json
@@ -33,9 +33,9 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@primer/primitives": "^7.11.10",
+    "@primer/primitives": "^7.15.0",
     "color2k": "^2.0.2",
-    "style-dictionary": "^3.8.0"
+    "style-dictionary": "3.8.0"
   },
   "engines": {
     "node": ">=16.0.0",
