--- a/package.json
+++ b/package.json
@@ -57,10 +57,11 @@
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "^8.41.0",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-github": "^4.7.0",
+    "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-mdx": "^1.17.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-primer-react": "^0.7.4",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
